<resources>
    <string name="app_name">Series &amp; Animes</string>

    <!--Facebook login-->
    <string name="facebook_app_id">1951740124900493</string>
    <string name="fb_login_protocol_scheme">fb1951740124900493</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Login Activity Strings-->
    <string name="login_image_description">Imagen representativa para el inicio de sesión</string>
    <string name="login_etx_username">Nombre de usuario</string>
    <string name="login_etx_password">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="login_ibutton_facebook">Botón de inicio de sesión con Facebook</string>
    <string name="login_ibutton_google">Botón de inicio de sesión con la cuenta de Google</string>
    <string name="login_button_register">Crear cuenta</string>
    <string name="login_txt_or">O ingresar con: </string>
    <string name="login_txt_copyright">Series &amp; Animes \u00A9 2018 \n Todos los derechos reservados</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="login_not_found_user">Usuario no registrado</string>
    <string name="login_validate_user_msg">Validando usuario…</string>
    <string name="login_found_user">Usuario válido</string>
    <string name="login_wrong_password">Contraseña incorrecta</string>
    <string name="facebook_login_error">Se produjo un error al iniciar con Facebook</string>
    <string name="facebook_login_canceled">Inicio cancelado por el usuario</string>
    <string name="app_account_error">Lo sentimos, ha ocurrido un problema iniciando sesión</string>

    <!--Register Activity Strings-->
    <string name="title_activity_register">Registro</string>
    <string name="register_image_description">Imagen representativa para la actividad de registro</string>
    <string name="register_etx_user_name_hint">Nombre de usuario</string>
    <string name="register_etx_email_hint">Correo electrónico</string>
    <string name="register_etx_password_hint">Contraseña</string>
    <string name="register_etx_password_validate_hint">Vuelva a escribir la contraseña</string>
    <string name="register_button">Crear cuenta</string>
    <string name="register_not_equals_passwords">Las contraseñas no coinciden, vuelva a intentarlo</string>
    <string name="register_msg_while_create_account">Creando cuenta…</string>
    <string name="register_already_exist_username">Nombre de usuario ya existe</string>
    <string name="register_created_user_successfully">Usuario creado con éxito</string>
    <string name="register_created_user_unsuccessfully">No se pudo crear el usuario</string>

    <string name="signed_with">Inició sesión con: {0}</string>

    <!--Navigation Drawer strings-->
    <string name="nav_opt_log_out">Cerrar sesión</string>

    <!--MainActivity Strings-->
    <string name="main_loggin_out_msg">Cerrando sesión de {0}</string>
    <string name="main_logged_out_successfuly">Sesión cerrada con éxito</string>
    <string name="main_menu_btn_reviews">Reseñas</string>
    <string name="main_menu_btn_series">Series</string>
    <string name="main_menu_btn_animes">Animes</string>

    <!--Reviews CardView strings-->
    <string name="reviews_cardview_usericon_description">Icono de usuario que realizó la publicación</string>
    <string name="reviews_cardview_username_unknown">Desconocido</string>
    <string name="reviews_cardview_type">Tipo: {0}</string>
    <string name="reviews_cardview_title">Título</string>
    <string name="reviews_cardview_preview_description">Descripción previa</string>
    <string name="reviews_cardview_name">Nombre: {0}</string>
    <string name="reviews_cardview_publication_date">Fecha: {0}</string>

    <!--Series CardView string-->
    <string name="series_cardview_series_image_description">Imagen de la series</string>
    <string name="series_cardview_title">Título</string>
    <string name="series_cardview_description">Descripción</string>
    <string name="series_cardview_start_description">Puntuación de los usuarios</string>

    <!--Animes CardView string-->
    <string name="animes_cardview_animes_image_description">Imagen de animes</string>
    <string name="animes_cardview_title">Título</string>
    <string name="animes_cardview_description">Descrićión</string>
    <string name="animes_cardview_start_description">Puntuación de los usuarios</string>

    <!--Reviews Activity strings-->
    <string name="title_activity_review_main">Reseña</string>
    <string name="reviews_activity_publish_by">Publicado por: {0}</string>
    <string name="reviews_activity_content_example">Esto es un texto de ejemplo Esto es un texto de ejemplo Esto es un texto de ejemplo Esto es un texto de ejemplo Esto es un texto de ejemplo
    Esto es un texto de ejemplo Esto es un texto de ejemplo Esto es un texto de ejemplo Esto es un texto de ejemplo Esto es un texto de ejemplo Esto es un texto de ejemplo
    Esto es un texto de ejemplo Esto es un texto de ejemplo Esto es un texto de ejemplo</string>
    <string name="reviews_activity_like_description">Indicar que te gusta la reseña</string>
    <string name="reviews_activity_dislike_description">Indicar que no te gusta la reseña</string>
    <string name="reviews_activity_make_comment">Comentar</string>

    <!--Comment CardView strings-->
    <string name="comment_cardview_username">Desconocido</string>
    <string name="comment_cardview_comment_example">Esto es un comentario Esto es un comentario Esto es un comentario Esto es un comentario Esto es un comentario
    Esto es un comentario Esto es un comentario Esto es un comentario</string>
    <string name="title_activity_show_comments">ShowComments</string>
    <string name="comment_activity_writte_comment">Escribir comentario…</string>
    <string name="comment_activity_btn_comment">Comentar</string>
    <string name="comment_count">{0} comentarios</string>

</resources>