<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_image_login"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/login_image_description"
                android:scaleType="fitXY"
                android:src="@drawable/login_activity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etx_username_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/login_etx_username"
                android:inputType="textAutoComplete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_image_login" />

            <EditText
                android:id="@+id/etx_password_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/login_etx_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etx_username_login" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="72dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorButtonsBackground"
                android:text="@string/login_button"
                android:textColor="@color/colorButtonsText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etx_password_login" />

            <TextView
                android:id="@+id/txt_login_or"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="72dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/login_txt_or"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/ibtn_facebook_login"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_or" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/ibtn_google_login"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibtn_facebook_login" />

            <Button
                android:id="@+id/btn_login_create_account"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="72dp"
                android:layout_marginLeft="72dp"
                android:layout_marginRight="72dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="24dp"
                android:text="@string/login_button_register"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibtn_google_login" />

            <TextView
                android:id="@+id/txt_login_copyrights"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/login_txt_copyright"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login_create_account" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>