<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="3dp"
    app:cardElevation="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.snowdream.android.widget.SmartImageView
            android:id="@+id/siv_user_photo_comment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/txt_comment_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            style="@style/TextAppearance.AppCompat.Title"
            android:textSize="14sp"
            android:text="@string/comment_cardview_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/siv_user_photo_comment"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_comment_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/comment_cardview_comment_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/siv_user_photo_comment"
            app:layout_constraintTop_toBottomOf="@+id/txt_comment_username" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_options_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_comment_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--active button color: android:tint="@color/colorPrimaryDark"-->
                <ImageButton
                    android:id="@+id/ibtn_like_comment"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="78dp"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/reviews_activity_like_description"
                    android:padding="0dp"
                    android:src="@drawable/ic_like"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ibtn_dislike_comment"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/reviews_activity_dislike_description"
                    android:padding="0dp"
                    android:src="@drawable/ic_dislike"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_comment_like_count"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_comment_like_count"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ibtn_dislike_comment"
                    app:layout_constraintStart_toEndOf="@+id/ibtn_like_comment"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_comment_dislike_count"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ibtn_dislike_comment"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>